<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>
    <parent>
        <groupId>no.nav.ung.deltakelseopplyser</groupId>
        <artifactId>ung-deltakelse-opplyser</artifactId>
        <version>${revision}${sha1}${changelist}</version>
    </parent>

    <artifactId>app</artifactId>

    <properties>
        <java.version>21</java.version>
        <kotlin.version>2.2.21</kotlin.version>
        <tokenSupport.version>5.0.37</tokenSupport.version>
        <springdoc.version>2.8.13</springdoc.version>
        <spring-cloud.version>4.3.0</spring-cloud.version>
        <logback.logstash.version>9.0</logback.logstash.version>
        <spring-mockk.version>4.0.2</spring-mockk.version>
        <awaitility.version>4.3.0</awaitility.version>
        <ung-sak.version>6.0.4</ung-sak.version>
        <fp-sak.version>2.7.3</fp-sak.version>
        <k9-format.version>12.5.8</k9-format.version>
        <k9-felles.version>9.0.2</k9-felles.version>
        <graphql-kotlin.version>8.8.1</graphql-kotlin.version>
        <tms-kotlin-builder.version>2.1.1</tms-kotlin-builder.version>
        <tms-mikrofrontend-builder.version>3.0.0</tms-mikrofrontend-builder.version>
        <sif-abac-kontrakt.version>1.6.0</sif-abac-kontrakt.version>
        <google-cloud-bigquery.version>2.55.3</google-cloud-bigquery.version>
    </properties>
    <dependencies>

        <dependency>
            <groupId>no.nav.ung.deltakelseopplyser</groupId>
            <artifactId>kontrakt</artifactId>
        </dependency>

        <dependency>
            <!-- Spring Boot -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-envers</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
            <version>${spring-cloud.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Spring Boot -->

        <!-- Sikkerhet -->
        <dependency>
            <groupId>no.nav.security</groupId>
            <artifactId>token-validation-spring</artifactId>
            <version>${tokenSupport.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.security</groupId>
            <artifactId>token-client-spring</artifactId>
            <version>${tokenSupport.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.security</groupId>
            <artifactId>token-validation-spring-test</artifactId>
            <version>${tokenSupport.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Sikkerhet -->

        <!-- K9 Kontrakter -->
        <dependency>
            <groupId>no.nav.ung.sak</groupId>
            <artifactId>kontrakt</artifactId>
            <version>${ung-sak.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.k9</groupId>
            <artifactId>soknad</artifactId>
            <version>${k9-format.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.k9</groupId>
            <artifactId>oppgave-ungdomsytelse</artifactId>
            <version>${k9-format.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.sif.abac</groupId>
            <artifactId>kontrakt</artifactId>
            <version>${sif-abac-kontrakt.version}</version>
        </dependency>
        <!-- K9 Kontrakter -->

        <!-- GraphQL -->
        <dependency>
            <groupId>com.expediagroup</groupId>
            <artifactId>graphql-kotlin-spring-client</artifactId>
            <version>${graphql-kotlin.version}</version>
        </dependency>
        <!-- GraphQL -->

        <!-- Swagger -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
        <!-- Swagger -->

        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <!-- Jackson -->

        <!-- Database -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>io.hypersistence</groupId>
            <artifactId>hypersistence-utils-hibernate-63</artifactId>
            <version>3.11.0</version>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Database -->

        <!-- Mine Sider (Nav.no) -->
        <dependency>
            <groupId>no.nav.tms.varsel</groupId>
            <artifactId>kotlin-builder</artifactId>
            <version>${tms-kotlin-builder.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.tms.mikrofrontend.selector</groupId>
            <artifactId>builder</artifactId>
            <version>${tms-mikrofrontend-builder.version}</version>
        </dependency>
        <!-- Mine Sider (Nav.no) -->

        <!-- Kotlin -->
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Kotlin -->

        <!-- Logging -->
        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>${logback.logstash.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>no.nav.k9.felles</groupId>
            <artifactId>k9-felles-log</artifactId>
            <version>${k9-felles.version}</version>
        </dependency>
        <dependency>
            <groupId>com.papertrailapp</groupId>
            <artifactId>logback-syslog4j</artifactId>
            <version>1.0.0</version>
            <scope>runtime</scope>
        </dependency>
        <!-- Logging -->

        <!--- BigQuery -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-bigquery</artifactId>
            <version>${google-cloud-bigquery.version}</version>
        </dependency>
        <!-- BigQuery -->

        <!-- Utils -->
        <dependency>
            <groupId>no.nav.fpsak.tidsserie</groupId>
            <artifactId>fpsak-tidsserie</artifactId>
            <version>${fp-sak.version}</version>
        </dependency>
        <!-- Utils -->

        <!-- Diverse testing -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>gcloud</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>kafka</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.ninja-squad</groupId>
            <artifactId>springmockk</artifactId>
            <version>${spring-mockk.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility-kotlin</artifactId>
            <version>${awaitility.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Diverse testing -->
    </dependencies>

    <build>
        <sourceDirectory>src/main/kotlin</sourceDirectory>
        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.basedir}/target/lib/</outputDirectory>
                            <includeScope>runtime</includeScope>
                            <prependGroupId>true</prependGroupId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathLayoutType>custom</classpathLayoutType>
                            <customClasspathLayout>
                                lib/$${artifact.groupId}.$${artifact.artifactId}-$${artifact.version}$${dashClassifier?}.$${artifact.extension}
                            </customClasspathLayout>
                            <mainClass>no.nav.ung.deltakelseopplyser.UngDeltakelseOpplyserApplicationKt</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                        <plugin>jpa</plugin>
                    </compilerPlugins>
                    <jvmTarget>21</jvmTarget>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-noarg</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>com.expediagroup</groupId>
                <artifactId>graphql-kotlin-maven-plugin</artifactId>
                <version>${graphql-kotlin.version}</version>
                <executions>
                    <execution>
                        <id>generate-pdl-api-graphql-client</id>
                        <goals>
                            <goal>generate-client</goal>
                        </goals>
                        <configuration>
                            <packageName>no.nav.pdl.generated</packageName>
                            <schemaFile>${project.basedir}/src/main/resources/pdl/pdl-api-schema.graphql</schemaFile>
                            <queryFileDirectory>${project.basedir}/src/main/resources/pdl</queryFileDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate-nom-api-graphql-client</id>
                        <goals>
                            <goal>generate-client</goal>
                        </goals>
                        <configuration>
                            <packageName>no.nav.nom.generated</packageName>
                            <schemaFile>${project.basedir}/src/main/resources/nom/nom-api-schema.graphql</schemaFile>
                            <queryFileDirectory>${project.basedir}/src/main/resources/nom</queryFileDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>nav-maven-repo</id>
            <url>https://github-package-registry-mirror.gc.nav.no/cached/maven-release</url>
        </repository>
    </repositories>

</project>
